--- a/client/src/components/PopLogin/popLogin.css
+++ b/client/src/components/PopLogin/popLogin.css
@@ -13,7 +13,8 @@
 
 .pop_content {
   position: absolute;
-  top: 85px;
+  /* top: 85px; */
+  top: 500px;
   /* left: 50%; */
   right: 1%;
   width: 549px;
